--- a/index.html
+++ b/index.html
@@ -17,18 +17,43 @@
                 <label for="firstname">Your First Name</label>
                 <input type="text" id="firstname" name="firstname">
                 <!-- TODO: Create a "lastname" input with type "text" -->
+                <label for="lastname">Your Last Name</label>
+                <input type="text" id="lastname" name="lastname">
+
             </div>
             <!-- TODO: Make fieldset and legend -->
+            <div>
+            <fieldset>
+            
+            <legend>Information</legend>
             <!-- Todo: Email Input -->
+            <label for="Email">Your Email</label>
+            <input type="text" id="Email" name="Email">
             <!-- Todo: Street Address Input -->
+            <label for="Street Address">Your Street Address</label>
+            <input type="text" id="Street Address" name="Street Address">
+
             <!-- Todo: City, State, and Zip Inputs -->
+            <label for="City, State, and Zip">Your City, State, and Zip</label>
+            <input type="text" id="City, State, and Zip" name="City, State, and Zip">
+            </fieldset>
+            </div>
 
             <!-- TODO: Second fieldset -->
+            <fieldset>
             <!-- TODO: Radio buttons for selecting preferred destination -->
+            <label>Age</label>
+            <input type="radio" id="18_older" value="18_older" name="user_age"><label for="18_older" class="light">18_older</label>
+            <input type="radio" id="under" value="under" name="user_age"><label for="under" class="light">under</label>
             <!-- TODO: Color input for selecting favorite color -->
+            <input type="color" id="color" value="color" name="color"><label for="color" class="light"></label>
             <!-- TODO: Checkboxes for selecting extra add-ons -->
-            
+            <label>are you a robot</label>
+            <input type="checkbox" id="yes" value="yes" name="yes"><label for="yes" class="light">yes</label>
+            <input type="checkbox" id="no" value="no" name="no"><label for="no" class="light">no</label>
+            </fieldset>
             <!-- TODO: Submit Button -->
+            <input type="submit" id="submit" value="submit" name="submit">
         </form>
     </main>
     <footer>
@@ -36,4 +61,5 @@
         <p>All images provided for free use via <a href="https://unsplash.com/">Unsplash.com</a> whose generous <a href="https://unsplash.com/license">license details can be found here</a>.</p>
     </footer>
 </body>
+
 </html>
