--- a/index.html
+++ b/index.html
@@ -36,15 +36,18 @@
             <!-- Todo: City, State, and Zip Inputs -->
             <label for="City, State, and Zip">Your City, State, and Zip</label>
             <input type="text" id="City, State, and Zip" name="City, State, and Zip">
+
+            <label for= "Age">your Age</label>
+            <input type="text" id="Age" name="Age">
             </fieldset>
             </div>
 
             <!-- TODO: Second fieldset -->
             <fieldset>
             <!-- TODO: Radio buttons for selecting preferred destination -->
-            <label>Age</label>
-            <input type="radio" id="18_older" value="18_older" name="user_age"><label for="18_older" class="light">18_older</label>
-            <input type="radio" id="under" value="under" name="user_age"><label for="under" class="light">under</label>
+            <label>done</label>
+            <input type="radio" id="yes" value="yes" name="yes"><label for="yes" class="light">yes</label>
+            <input type="radio" id="no" value="no" name="no"><label for="no" class="light">no</label>
             <!-- TODO: Color input for selecting favorite color -->
             <input type="color" id="color" value="color" name="color"><label for="color" class="light"></label>
             <!-- TODO: Checkboxes for selecting extra add-ons -->
