modified index html

--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
             <select name="state"> 
                 <option value="AK">Alaska</option>
             </select>
-            <label for="zip">your zip</label>
-            <input type="text" id="zip" name="zip">
-            
+            <tr>
+            <td>zip</td>
+            <td><input type="text" maxlength="5" minlength="5"</td>
+            </tr>
 
-            <label for= "Age">your Age</label>
-            <input type="text" id="Age" name="Age">
+            <tr>
+                <td>age</td>
+                <td><input type="text" maxlength="120" minlength="120"</td>
+                </tr>
             </fieldset>
             </div>
 
