--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- Todo: Email Input -->
             <label for="Email">Your Email<span class="required-field">*</span>
             </label>
-            <input type="text" id="Email" name="Email"required>
+            <input type="email" id="Email" name="Email"required>
             <!-- Todo: Street Address Input -->
             <label for="Street Address">Your Street Address<span class="required-field">*</span>
             </label>
@@ -45,8 +45,7 @@
                 <td><input type="text" maxlength="8" minlength="4"</td>
                </tr
 
-            <!-- Todo: City, State, and Zip Inputs -->
-            <label for="City,">Your City,</label>
+            <label for="City">Your City</label>
             <input type="text" id="City" name="City">
             <label for="state">your state</label>
             <select name="state"> 
@@ -59,7 +58,7 @@
 
             <tr>
                 <td>age</td>
-                <td><input type="text" maxlength="120" minlength="120"</td>
+                <td><input type="number" max="25" min="21"</td>
                 </tr>
             </fieldset>
             </div>
